Moved overflow-x: hidden to html element and added a width of 100vw to prevent scrollbars showing up from dynamic content from messing with the site width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html {
+  width: 100vw;
   overflow-x: hidden;
 }
